data/test/regression/type_check/fail/array_9.v
reg r = 1;
wire[3:0] w;
assign w[r] = 1;
